--- a/project/pom.xml
+++ b/project/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>project</artifactId>
+    <artifactId>easylink-project</artifactId>
 
 
     <dependencies>
@@ -91,5 +91,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+
 
 </project>
